feature: shop crud [Finishes #000001]
