# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\Auth\AuthController;
+use App\Http\Controllers\Api\Shop\ShopController;
 
 /*
 |--------------------------------------------------------------------------
@@ -17,7 +18,18 @@ use App\Http\Controllers\Api\Auth\AuthController;
 Route::prefix('v1')->group(function () {
     Route::post('signup', [AuthController::class, 'register']);
     Route::post('signin', [AuthController::class, 'login']);
+
+    Route::middleware(['auth:sanctum'])->group(function () {
+    Route::get('shops', [ShopController::class, 'getAllShop']);
+    Route::get('shops/{shop}', [ShopController::class, 'getShop']);
+    Route::post('/create-shop', [ShopController::class, 'createShop']);
+    Route::put('/update-shop/{shop}', [ShopController::class, 'updateShop']);
+    Route::delete('/delete-shop/{shop}', [ShopController::class, 'deleteShop']);
 });
+
+});
+
+
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
